@@ -4,9 +4,7 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class Account {
@@ -30,9 +28,7 @@ public class Account {
     private double creditLimit;
 
     @JsonProperty("Transactions")
-    private List<Transaction> transactions = new ArrayList<Transaction>();
-
-    private Map<String, Object> additionalProperties = new HashMap<String, Object>();
+    private List<Transaction> transactions = new ArrayList<>();
 
     @JsonProperty("Name")
     public String getName() {
