@@ -1,12 +1,13 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 Not yet released
+* Warn about disabled banks in the transactions list
 * Remove TrustBuddy since they're no longer in business
 * Remove unused class MobilbankenBase
 
 v1.9.10.10 (2016-10-17)
 * Fixes crash for Amex
-* Strikethrough balance in widget indicates update problems. 
+* Strikethrough balance in widget indicates update problems.
 
 v1.9.10.9 (2016-10-12)
 * Länsförsäkringar: Remove broken web links
